Changes made on 25th March

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.application.name=Awesomity-Challenge
 spring.datasource.url=jdbc:postgresql://localhost:5432/ems
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
-
 
 
 # Email Sending Configurations
@@ -15,6 +15,10 @@ spring.mail.username=hitimanadav47@gmail.com
 spring.mail.password=yfpd vtmw emrc talm
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+#Kafka configuration
+spring.kafka.bootstrap-servers=localhost:9092
+
 
 
 
